cabal-version:      2.4
name:               commonmark-wikilink
version:            0.2.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web
synopsis:           Obsidian-friendly commonmark wikilink parser
description:        Obsidian-friendly commonmark wikilink parser
bug-reports:        https://github.com/srid/commonmark-wikilink
extra-source-files:
  LICENSE
  README.md

flag ghcid
  default: False
  manual:  True

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , base               >=4.13.0.0 && <5
    , commonmark
    , commonmark-pandoc
    , megaparsec
    , network-uri
    , pandoc-types
    , parsec
    , relude             >=1.0
    , uri-encode
    , url-slug

  hs-source-dirs:     src
  default-language:   Haskell2010

library
  import:          shared
  exposed-modules: Commonmark.Extensions.WikiLink

test-suite test
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , relude
    , commonmark-simple

  if flag(ghcid)
    hs-source-dirs: src

  else
    build-depends: commonmark-wikilink
    other-modules: Commonmark.Extensions.WikiLinkSpec
